set(_FILES
  fvMotionSolvers/fvMotionSolver/fvMotionSolver.C
  fvMotionSolvers/displacement/SBRStress/displacementSBRStressFvMotionSolver.C
  fvMotionSolvers/displacement/laplacian/displacementLaplacianFvMotionSolver.C
  fvMotionSolvers/displacement/surfaceAlignedSBRStress/surfaceAlignedSBRStressFvMotionSolver.C
  fvMotionSolvers/displacement/solidBodyDisplacementLaplacian/solidBodyDisplacementLaplacianFvMotionSolver.C
  fvMotionSolvers/componentDisplacement/componentLaplacian/displacementComponentLaplacianFvMotionSolver.C
  fvMotionSolvers/velocity/laplacian/velocityLaplacianFvMotionSolver.C
  fvMotionSolvers/componentVelocity/componentLaplacian/velocityComponentLaplacianFvMotionSolver.C
  motionDiffusivity/motionDiffusivity/motionDiffusivity.C
  motionDiffusivity/uniform/uniformDiffusivity.C
  motionDiffusivity/inverseDistance/inverseDistanceDiffusivity.C
  motionDiffusivity/inverseFaceDistance/inverseFaceDistanceDiffusivity.C
  motionDiffusivity/inversePointDistance/inversePointDistanceDiffusivity.C
  motionDiffusivity/inverseVolume/inverseVolumeDiffusivity.C
  motionDiffusivity/directional/directionalDiffusivity.C
  motionDiffusivity/motionDirectional/motionDirectionalDiffusivity.C
  motionDiffusivity/file/fileDiffusivity.C
  motionDiffusivity/manipulators/quadratic/quadraticDiffusivity.C
  motionDiffusivity/manipulators/exponential/exponentialDiffusivity.C
  motionInterpolation/motionInterpolation/motionInterpolation.C
  motionInterpolation/patchCorrected/patchCorrectedInterpolation.C
  motionInterpolation/patchTransformed/patchTransformedInterpolation.C
  fvPatchFields/derived/cellMotion/cellMotionFvPatchFields.C
  fvPatchFields/derived/surfaceSlipDisplacement/surfaceSlipDisplacementFvPatchFields.C
  pointPatchFields/derived/oscillatingVelocity/oscillatingVelocityPointPatchVectorField.C
  pointPatchFields/derived/angularOscillatingVelocity/angularOscillatingVelocityPointPatchVectorField.C
  pointPatchFields/derived/oscillatingDisplacement/oscillatingDisplacementPointPatchVectorField.C
  pointPatchFields/derived/angularOscillatingDisplacement/angularOscillatingDisplacementPointPatchVectorField.C
  pointPatchFields/derived/surfaceSlipDisplacement/surfaceSlipDisplacementPointPatchVectorField.C
  pointPatchFields/derived/surfaceDisplacement/surfaceDisplacementPointPatchVectorField.C
  pointPatchFields/derived/waveDisplacement/waveDisplacementPointPatchVectorField.C
  pointPatchFields/derived/timeVaryingMappedFixedValue/timeVaryingMappedFixedValuePointPatchFields.C
  pointPatchFields/derived/uniformInterpolatedDisplacement/uniformInterpolatedDisplacementPointPatchVectorField.C
)
add_library(fvMotionSolvers ${_FILES})
target_compile_features(fvMotionSolvers PUBLIC cxx_std_11)
target_compile_definitions(fvMotionSolvers PUBLIC WM_LABEL_SIZE=${WM_LABEL_SIZE} WM_${WM_PRECISION} NoRepository OPENFOAM=${OPENFOAM_VERSION})
target_link_libraries(fvMotionSolvers PUBLIC fvOptions dynamicMesh)
target_include_directories(fvMotionSolvers PUBLIC
  fvMotionSolvers/componentDisplacement/componentLaplacian
  fvMotionSolvers/componentVelocity/componentLaplacian
  fvMotionSolvers/displacement/SBRStress
  fvMotionSolvers/displacement/laplacian
  fvMotionSolvers/displacement/solidBodyDisplacementLaplacian
  fvMotionSolvers/displacement/surfaceAlignedSBRStress
  fvMotionSolvers/fvMotionSolver
  fvMotionSolvers/velocity/laplacian
  fvPatchFields/derived/cellMotion
  fvPatchFields/derived/surfaceSlipDisplacement
  motionDiffusivity/directional
  motionDiffusivity/file
  motionDiffusivity/inverseDistance
  motionDiffusivity/inverseFaceDistance
  motionDiffusivity/inversePointDistance
  motionDiffusivity/inverseVolume
  motionDiffusivity/manipulators/exponential
  motionDiffusivity/manipulators/quadratic
  motionDiffusivity/motionDiffusivity
  motionDiffusivity/motionDirectional
  motionDiffusivity/uniform
  motionInterpolation/motionInterpolation
  motionInterpolation/patchCorrected
  motionInterpolation/patchTransformed
  pointPatchFields/derived/angularOscillatingDisplacement
  pointPatchFields/derived/angularOscillatingVelocity
  pointPatchFields/derived/oscillatingDisplacement
  pointPatchFields/derived/oscillatingVelocity
  pointPatchFields/derived/surfaceDisplacement
  pointPatchFields/derived/surfaceSlipDisplacement
  pointPatchFields/derived/timeVaryingMappedFixedValue
  pointPatchFields/derived/uniformInterpolatedDisplacement
  pointPatchFields/derived/waveDisplacement
)
install(TARGETS fvMotionSolvers DESTINATION ${CMAKE_INSTALL_LIBDIR}/openfoam EXPORT openfoam-targets)
