set(_FILES
  cellSetOption/cellSetOption.C
  interRegionOption/interRegionOption.C
  sources/general/codedSource/codedFvSources.C
  sources/general/semiImplicitSource/semiImplicitSources.C
  sources/derived/acousticDampingSource/acousticDampingSource.C
  sources/derived/actuationDiskSource/actuationDiskSource.C
  sources/derived/buoyancyEnergy/buoyancyEnergy.C
  sources/derived/buoyancyForce/buoyancyForce.C
  sources/derived/directionalPressureGradientExplicitSource/directionalPressureGradientExplicitSource.C
  sources/derived/explicitPorositySource/explicitPorositySource.C
  sources/derived/jouleHeatingSource/jouleHeatingSource.C
  sources/derived/meanVelocityForce/meanVelocityForce.C
  sources/derived/meanVelocityForce/patchMeanVelocityForce/patchMeanVelocityForce.C
  sources/derived/multiphaseStabilizedTurbulence/multiphaseStabilizedTurbulence.C
  sources/derived/phaseLimitStabilization/phaseLimitStabilization.C
  sources/derived/radialActuationDiskSource/radialActuationDiskSource.C
  sources/derived/rotorDiskSource/rotorDiskSource.C
  sources/derived/rotorDiskSource/bladeModel/bladeModel.C
  sources/derived/rotorDiskSource/profileModel/profileModel.C
  sources/derived/rotorDiskSource/profileModel/profileModelList.C
  sources/derived/rotorDiskSource/profileModel/lookup/lookupProfile.C
  sources/derived/rotorDiskSource/profileModel/series/seriesProfile.C
  sources/derived/rotorDiskSource/trimModel/trimModel/trimModel.C
  sources/derived/rotorDiskSource/trimModel/trimModel/trimModelNew.C
  sources/derived/rotorDiskSource/trimModel/fixed/fixedTrim.C
  sources/derived/rotorDiskSource/trimModel/targetCoeff/targetCoeffTrim.C
  sources/derived/solidificationMeltingSource/solidificationMeltingSource.C
  sources/derived/tabulatedAccelerationSource/tabulatedAccelerationSource.C
  sources/derived/tabulatedAccelerationSource/tabulated6DoFAcceleration/tabulated6DoFAcceleration.C
  sources/derived/viscousDissipation/viscousDissipation.C
  sources/derived/buoyancyTurbSource/buoyancyTurbSource.C
  sources/derived/patchCellsSource/patchCellsSource.C
  sources/derived/fanMomentumSource/fanMomentumSource.C
  sources/derived/heatExchangerSource/heatExchangerSource.C
  sources/derived/heatExchangerSource/heatExchangerModels/heatExchangerModel/heatExchangerModel.C
  sources/derived/heatExchangerSource/heatExchangerModels/heatExchangerModel/heatExchangerModelNew.C
  sources/derived/heatExchangerSource/heatExchangerModels/effectivenessTable/effectivenessTable.C
  sources/derived/heatExchangerSource/heatExchangerModels/referenceTemperature/referenceTemperature.C
  sources/interRegion/interRegionHeatTransfer/interRegionHeatTransferModel/interRegionHeatTransferModel.C
  sources/interRegion/interRegionHeatTransfer/constantHeatTransfer/constantHeatTransfer.C
  sources/interRegion/interRegionHeatTransfer/tabulatedHeatTransfer/tabulatedHeatTransfer.C
  sources/interRegion/interRegionHeatTransfer/tabulatedNTUHeatTransfer/tabulatedNTUHeatTransfer.C
  sources/interRegion/interRegionHeatTransfer/variableHeatTransfer/variableHeatTransfer.C
  sources/interRegion/interRegionExplicitPorositySource/interRegionExplicitPorositySource.C
  constraints/general/fixedValueConstraint/fixedValueConstraints.C
  constraints/general/mapFieldConstraint/mapFieldConstraints.C
  constraints/derived/fixedTemperatureConstraint/fixedTemperatureConstraint.C
  constraints/derived/velocityDampingConstraint/velocityDampingConstraint.C
  corrections/limitTemperature/limitTemperature.C
  corrections/limitVelocity/limitVelocity.C
  corrections/limitTurbulenceViscosity/limitTurbulenceViscosity.C
)
add_library(fvOptions ${_FILES})
target_compile_features(fvOptions PUBLIC cxx_std_11)
target_compile_definitions(fvOptions PUBLIC WM_LABEL_SIZE=${WM_LABEL_SIZE} WM_${WM_PRECISION} NoRepository OPENFOAM=${OPENFOAM_VERSION})
target_link_libraries(fvOptions PUBLIC incompressibleTurbulenceModels compressibleTurbulenceModels reactionThermophysicalModels overset)
target_include_directories(fvOptions PUBLIC
  cellSetOption
  constraints/derived/fixedTemperatureConstraint
  constraints/derived/velocityDampingConstraint
  constraints/general/fixedValueConstraint
  constraints/general/mapFieldConstraint
  corrections/limitTemperature
  corrections/limitTurbulenceViscosity
  corrections/limitVelocity
  interRegionOption
  sources/derived/acousticDampingSource
  sources/derived/actuationDiskSource
  sources/derived/buoyancyEnergy
  sources/derived/buoyancyForce
  sources/derived/buoyancyTurbSource
  sources/derived/directionalPressureGradientExplicitSource
  sources/derived/explicitPorositySource
  sources/derived/fanMomentumSource
  sources/derived/heatExchangerSource
  sources/derived/heatExchangerSource/heatExchangerModels/effectivenessTable
  sources/derived/heatExchangerSource/heatExchangerModels/heatExchangerModel
  sources/derived/heatExchangerSource/heatExchangerModels/referenceTemperature
  sources/derived/jouleHeatingSource
  sources/derived/meanVelocityForce
  sources/derived/meanVelocityForce/patchMeanVelocityForce
  sources/derived/multiphaseStabilizedTurbulence
  sources/derived/patchCellsSource
  sources/derived/phaseLimitStabilization
  sources/derived/radialActuationDiskSource
  sources/derived/rotorDiskSource
  sources/derived/rotorDiskSource/bladeModel
  sources/derived/rotorDiskSource/profileModel
  sources/derived/rotorDiskSource/profileModel/lookup
  sources/derived/rotorDiskSource/profileModel/series
  sources/derived/rotorDiskSource/trimModel/fixed
  sources/derived/rotorDiskSource/trimModel/targetCoeff
  sources/derived/rotorDiskSource/trimModel/trimModel
  sources/derived/solidificationMeltingSource
  sources/derived/tabulatedAccelerationSource
  sources/derived/tabulatedAccelerationSource/tabulated6DoFAcceleration
  sources/derived/viscousDissipation
  sources/general/codedSource
  sources/general/semiImplicitSource
  sources/interRegion/interRegionExplicitPorositySource
  sources/interRegion/interRegionHeatTransfer/constantHeatTransfer
  sources/interRegion/interRegionHeatTransfer/interRegionHeatTransferModel
  sources/interRegion/interRegionHeatTransfer/tabulatedHeatTransfer
  sources/interRegion/interRegionHeatTransfer/tabulatedNTUHeatTransfer
  sources/interRegion/interRegionHeatTransfer/variableHeatTransfer
)
install(TARGETS fvOptions DESTINATION ${CMAKE_INSTALL_LIBDIR}/openfoam EXPORT openfoam-targets)
