set(_FILES
  edgeMesh/edgeMesh.C
  edgeMesh/edgeMeshIO.C
  edgeMesh/edgeMeshNew.C
  edgeMesh/edgeFormats/edgeMeshFormatsCore.C
  edgeMesh/edgeFormats/edgeMesh/edgeMeshFormat.C
  edgeMesh/edgeFormats/edgeMesh/edgeMeshFormatRunTime.C
  edgeMesh/edgeFormats/nastran/NASedgeFormat.C
  edgeMesh/edgeFormats/nastran/NASedgeFormatRunTime.C
  edgeMesh/edgeFormats/obj/OBJedgeFormat.C
  edgeMesh/edgeFormats/obj/OBJedgeFormatRunTime.C
  edgeMesh/edgeFormats/starcd/STARCDedgeFormat.C
  edgeMesh/edgeFormats/starcd/STARCDedgeFormatRunTime.C
  edgeMesh/edgeFormats/vtk/VTKedgeFormat.C
  edgeMesh/edgeFormats/vtk/VTKedgeFormatRunTime.C
  edgeMesh/edgeMeshTools/edgeMeshTools.C
  edgeMesh/edgeMeshTools/edgeMeshFeatureProximity.C
  edgeMesh/featureEdgeMesh/featureEdgeMesh.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMesh.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshNew.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormat.C
  edgeMesh/extendedEdgeMesh/extendedEdgeMeshFormatRunTime.C
  edgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMesh.C
  edgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormat.C
  edgeMesh/extendedFeatureEdgeMesh/extendedFeatureEdgeMeshFormatRunTime.C
  cellClassification/cellClassification.C
  cellClassification/cellInfo.C
  cellQuality/cellQuality.C
  cellDist/cellDistFuncs.C
  cellDist/patchWave/patchWave.C
  cellDist/wallPoint/wallPoint.C
  cellFeatures/cellFeatures.C
  polyMeshZipUpCells/polyMeshZipUpCells.C
  primitiveMeshGeometry/primitiveMeshGeometry.C
  meshSearch/meshSearch.C
  meshSearch/meshSearchFACE_CENTRE_TRISMeshObject.C
  meshSearch/meshSearchMeshObject.C
  fields/pointPatchFields/uniformFixedValue/uniformFixedValuePointPatchFields.C
  fields/volume/polyMeshFields.C
  meshTools/meshTools.C
  algorithms/PointEdgeWave/PointEdgeWaveBase.C
  algorithms/PointEdgeWave/pointEdgePoint.C
  algorithms/PatchEdgeFaceWave/PatchEdgeFaceWaveBase.C
  algorithms/PatchEdgeFaceWave/patchEdgeFaceInfo.C
  algorithms/PatchEdgeFaceWave/patchPatchDist.C
  algorithms/PatchEdgeFaceWave/patchEdgeFaceRegions.C
  algorithms/MeshWave/MeshWaveBase.C
  algorithms/MeshWave/FaceCellWaveBase.C
  regionSplit/regionSplit.C
  regionSplit/localPointRegion.C
  regionSplit2D/regionSplit2D.C
  indexedOctree/treeDataFace.C
  indexedOctree/treeDataPrimitivePatchBase.C
  indexedOctree/treeDataTriSurface.C
  searchableSurfaces/closedTriSurfaceMesh/closedTriSurfaceMesh.C
  searchableSurfaces/searchableBox/searchableBox.C
  searchableSurfaces/searchableCone/searchableCone.C
  searchableSurfaces/searchableCylinder/searchableCylinder.C
  searchableSurfaces/searchableDisk/searchableDisk.C
  searchableSurfaces/searchableExtrudedCircle/searchableExtrudedCircle.C
  searchableSurfaces/searchablePlane/searchablePlane.C
  searchableSurfaces/searchablePlate/searchablePlate.C
  searchableSurfaces/searchableRotatedBox/searchableRotatedBox.C
  searchableSurfaces/searchableSphere/searchableSphere.C
  searchableSurfaces/searchableSurface/searchableSurface.C
  searchableSurfaces/searchableSurfaceCollection/searchableSurfaceCollection.C
  searchableSurfaces/searchableSurfaces/searchableSurfaces.C
  searchableSurfaces/searchableSurfacesQueries/searchableSurfacesQueries.C
  searchableSurfaces/searchableSurfaceWithGaps/searchableSurfaceWithGaps.C
  searchableSurfaces/subTriSurfaceMesh/subTriSurfaceMesh.C
  searchableSurfaces/triSurfaceMesh/triSurfaceMesh.C
  coordSet/coordSet.C
  coordSet/writers/abaqus/abaqusCoordSetWriter.C
  coordSet/writers/common/coordSetWriter.C
  coordSet/writers/common/coordSetWriterBuffers.C
  coordSet/writers/common/coordSetWriterNew.C
  coordSet/writers/csv/csvCoordSetWriter.C
  coordSet/writers/ensight/ensightCoordSetWriter.C
  coordSet/writers/gltf/gltfCoordSetWriter.C
  coordSet/writers/gnuplot/gnuplotCoordSetWriter.C
  coordSet/writers/nastran/nastranCoordSetWriter.C
  coordSet/writers/null/nullCoordSetWriter.C
  coordSet/writers/raw/rawCoordSetWriter.C
  coordSet/writers/vtk/foamVtkCoordSetWriter.C
  coordSet/writers/vtk/vtkCoordSetWriter.C
  coordSet/writers/xmgrace/xmgraceCoordSetWriter.C
  graph/curve.C
  graph/graph.C
  graph/writers/raw/rawGraphWriter.C
  graph/writers/gnuplot/gnuplotGraphWriter.C
  graph/writers/xmgrace/xmgraceGraphWriter.C
  topoSet/topoSets/cellBitSet.C
  topoSet/topoSets/cellSet.C
  topoSet/topoSets/cellZoneSet.C
  topoSet/topoSets/faceBitSet.C
  topoSet/topoSets/faceBoolSet.C
  topoSet/topoSets/faceSet.C
  topoSet/topoSets/faceZoneSet.C
  topoSet/topoSets/pointBitSet.C
  topoSet/topoSets/pointSet.C
  topoSet/topoSets/pointZoneSet.C
  topoSet/topoSets/topoBoolSet.C
  topoSet/topoSets/topoBitSet.C
  topoSet/topoSets/topoSet.C
  topoSet/topoSetSource/topoSetSource.C
  topoSet/cellSources/topoSetCellSource/topoSetCellSource.C
  topoSet/cellSources/boundaryToCell/boundaryToCell.C
  topoSet/cellSources/boxToCell/boxToCell.C
  topoSet/cellSources/cellToCell/cellToCell.C
  topoSet/cellSources/clipPlaneToCell/clipPlaneToCell.C
  topoSet/cellSources/cylinderAnnulusToCell/cylinderAnnulusToCell.C
  topoSet/cellSources/cylinderToCell/cylinderToCell.C
  topoSet/cellSources/faceToCell/faceToCell.C
  topoSet/cellSources/faceZoneToCell/faceZoneToCell.C
  topoSet/cellSources/fieldToCell/fieldToCell.C
  topoSet/cellSources/haloToCell/haloToCell.C
  topoSet/cellSources/labelToCell/labelToCell.C
  topoSet/cellSources/nbrToCell/nbrToCell.C
  topoSet/cellSources/nearestToCell/nearestToCell.C
  topoSet/cellSources/patchToCell/patchToCell.C
  topoSet/cellSources/pointToCell/pointToCell.C
  topoSet/cellSources/regionToCell/regionToCell.C
  topoSet/cellSources/rotatedBoxToCell/rotatedBoxToCell.C
  topoSet/cellSources/shapeToCell/shapeToCell.C
  topoSet/cellSources/searchableSurfaceToCell/searchableSurfaceToCell.C
  topoSet/cellSources/sphereToCell/sphereToCell.C
  topoSet/cellSources/surfaceToCell/surfaceToCell.C
  topoSet/cellSources/targetVolumeToCell/targetVolumeToCell.C
  topoSet/cellSources/zoneToCell/zoneToCell.C
  topoSet/faceSources/topoSetFaceSource/topoSetFaceSource.C
  topoSet/faceSources/boundaryToFace/boundaryToFace.C
  topoSet/faceSources/boxToFace/boxToFace.C
  topoSet/faceSources/cellToFace/cellToFace.C
  topoSet/faceSources/clipPlaneToFace/clipPlaneToFace.C
  topoSet/faceSources/cylinderAnnulusToFace/cylinderAnnulusToFace.C
  topoSet/faceSources/cylinderToFace/cylinderToFace.C
  topoSet/faceSources/faceToFace/faceToFace.C
  topoSet/faceSources/labelToFace/labelToFace.C
  topoSet/faceSources/normalToFace/normalToFace.C
  topoSet/faceSources/patchToFace/patchToFace.C
  topoSet/faceSources/pointToFace/pointToFace.C
  topoSet/faceSources/regionToFace/regionToFace.C
  topoSet/faceSources/searchableSurfaceToFace/searchableSurfaceToFace.C
  topoSet/faceSources/sphereToFace/sphereToFace.C
  topoSet/faceSources/zoneToFace/zoneToFace.C
  topoSet/faceSources/holeToFace/holeToFace.C
  topoSet/pointSources/topoSetPointSource/topoSetPointSource.C
  topoSet/pointSources/boxToPoint/boxToPoint.C
  topoSet/pointSources/cellToPoint/cellToPoint.C
  topoSet/pointSources/clipPlaneToPoint/clipPlaneToPoint.C
  topoSet/pointSources/cylinderToPoint/cylinderToPoint.C
  topoSet/pointSources/faceToPoint/faceToPoint.C
  topoSet/pointSources/labelToPoint/labelToPoint.C
  topoSet/pointSources/nearestToPoint/nearestToPoint.C
  topoSet/pointSources/pointToPoint/pointToPoint.C
  topoSet/pointSources/searchableSurfaceToPoint/searchableSurfaceToPoint.C
  topoSet/pointSources/sphereToPoint/sphereToPoint.C
  topoSet/pointSources/surfaceToPoint/surfaceToPoint.C
  topoSet/pointSources/zoneToPoint/zoneToPoint.C
  topoSet/faceZoneSources/topoSetFaceZoneSource/topoSetFaceZoneSource.C
  topoSet/faceZoneSources/faceZoneToFaceZone/faceZoneToFaceZone.C
  topoSet/faceZoneSources/setsToFaceZone/setsToFaceZone.C
  topoSet/faceZoneSources/setToFaceZone/setToFaceZone.C
  topoSet/faceZoneSources/setAndNormalToFaceZone/setAndNormalToFaceZone.C
  topoSet/faceZoneSources/searchableSurfaceToFaceZone/searchableSurfaceToFaceZone.C
  topoSet/faceZoneSources/planeToFaceZone/planeToFaceZone.C
  topoSet/faceZoneSources/cellToFaceZone/cellToFaceZone.C
  topoSet/cellZoneSources/topoSetCellZoneSource/topoSetCellZoneSource.C
  topoSet/cellZoneSources/setToCellZone/setToCellZone.C
  topoSet/pointZoneSources/topoSetPointZoneSource/topoSetPointZoneSource.C
  topoSet/pointZoneSources/setToPointZone/setToPointZone.C
  momentOfInertia/momentOfInertia.C
  surfaceSets/surfaceSets.C
  triSurface/faceTriangulation/faceTriangulation.C
  triSurface/orientedSurface/orientedSurface.C
  triSurface/surfaceLocation/surfaceLocation.C
  triSurface/booleanOps/surfaceIntersection/surfaceIntersection.C
  triSurface/booleanOps/surfaceIntersection/surfaceIntersectionFuncs.C
  triSurface/booleanOps/surfaceIntersection/edgeIntersections.C
  triSurface/booleanOps/booleanSurface/booleanSurface.C
  triSurface/booleanOps/intersectedSurface/intersectedSurface.C
  triSurface/booleanOps/intersectedSurface/edgeSurface.C
  triSurface/triSurfaceSearch/triSurfaceSearch.C
  triSurface/triSurfaceSearch/triSurfaceRegionSearch.C
  triSurface/triangleFuncs/triangleFuncs.C
  triSurface/surfaceFeatures/surfaceFeatures.C
  triSurface/triSurfaceLoader/triSurfaceLoader.C
  triSurface/triSurfaceTools/triSurfaceTools.C
  triSurface/triSurfaceTools/triSurfaceCloseness.C
  triSurface/triSurfaceTools/triSurfaceCurvature.C
  triSurface/triSurfaceTools/geompack/geompack.C
  triSurface/triSurfaceTools/pointToPointPlanarInterpolation.C
  twoDPointCorrector/twoDPointCorrector.C
  processorLOD/processorLOD/processorLOD.C
  processorLOD/box/box.C
  processorLOD/cellBox/cellBox.C
  processorLOD/faceBox/faceBox.C
  AMIInterpolation/AMIInterpolation/AMIInterpolation.C
  AMIInterpolation/AMIInterpolation/AMIInterpolationNew.C
  AMIInterpolation/AMIInterpolation/advancingFrontAMI/advancingFrontAMI.C
  AMIInterpolation/AMIInterpolation/advancingFrontAMI/advancingFrontAMIParallelOps.C
  AMIInterpolation/AMIInterpolation/faceAreaWeightAMI/faceAreaWeightAMI.C
  AMIInterpolation/AMIInterpolation/nearestFaceAMI/nearestFaceAMI.C
  AMIInterpolation/faceAreaIntersect/faceAreaIntersect.C
  AMIInterpolation/GAMG/interfaces/cyclicAMIGAMGInterface/cyclicAMIGAMGInterface.C
  AMIInterpolation/GAMG/interfaceFields/cyclicAMIGAMGInterfaceField/cyclicAMIGAMGInterfaceField.C
  AMIInterpolation/GAMG/interfaces/cyclicACMIGAMGInterface/cyclicACMIGAMGInterface.C
  AMIInterpolation/GAMG/interfaceFields/cyclicACMIGAMGInterfaceField/cyclicACMIGAMGInterfaceField.C
  AMIInterpolation/triangle2D/triangle2D.C
  AMIInterpolation/AMIInterpolation/faceAreaWeightAMI2D/faceAreaWeightAMI2D.C
  AMIInterpolation/patches/cyclicAMI/cyclicAMILduInterfaceField/cyclicAMILduInterface.C
  AMIInterpolation/patches/cyclicAMI/cyclicAMILduInterfaceField/cyclicAMILduInterfaceField.C
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPolyPatch/cyclicAMIPolyPatch.C
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPolyPatch/cyclicAMIPolyPatchTopologyChange.C
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPointPatch/cyclicAMIPointPatch.C
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPointPatchField/cyclicAMIPointPatchFields.C
  AMIInterpolation/patches/cyclicACMI/cyclicACMILduInterfaceField/cyclicACMILduInterface.C
  AMIInterpolation/patches/cyclicACMI/cyclicACMILduInterfaceField/cyclicACMILduInterfaceField.C
  AMIInterpolation/patches/cyclicACMI/cyclicACMIPolyPatch/cyclicACMIPolyPatch.C
  AMIInterpolation/patches/cyclicACMI/cyclicACMIPointPatch/cyclicACMIPointPatch.C
  AMIInterpolation/patches/cyclicACMI/cyclicACMIPointPatchField/cyclicACMIPointPatchFields.C
  AMIInterpolation/patches/cyclicPeriodicAMI/cyclicPeriodicAMIPolyPatch/cyclicPeriodicAMIPolyPatch.C
  matrices/lduMatrix/preconditioners/distributedDILUPreconditioner/distributedDILUPreconditioner.C
  matrices/lduMatrix/preconditioners/distributedDILUPreconditioner/distributedDICPreconditioner.C
  matrices/lduMatrix/preconditioners/distributedDILUPreconditioner/processorColour.C
  multiWorld/multiWorldConnectionsObject.C
  mappedPatches/mappedPolyPatch/mappedPatchBase.C
  mappedPatches/mappedPolyPatch/mappedPolyPatch.C
  mappedPatches/mappedPolyPatch/mappedWallPolyPatch.C
  mappedPatches/mappedPolyPatch/mappedVariableThicknessWallPolyPatch.C
  mappedPatches/mappedPointPatch/mappedPointPatch.C
  mappedPatches/mappedPointPatch/mappedWallPointPatch.C
  polyTopoChange/topoAction/topoActions.C
  polyTopoChange/polyTopoChange.C
  PatchFunction1/PatchFunction1/patchFunction1Base.C
  PatchFunction1/makePatchFunction1s.C
  PatchFunction1/coordinateScaling/coordinateScalings.C
  PatchFunction1/CodedField/makeCodedFields.C
  PatchFunction1/MappedFile/MappedFileFilterField.C
  meshStructure/meshStructure.C
  coupling/externalFileCoupler.C
  output/vtk/mesh/foamVtkInternalMeshWriter.C
  output/vtk/patch/foamVtkPatchMeshWriter.C
  output/vtk/topoSet/foamVtkWriteTopoSet.C
  output/vtk/topoSet/foamVtkWriteFaceSet.C
  output/vtk/topoSet/foamVtkWritePointSet.C
  output/vtk/topoSet/foamVtkWriteCellSetFaces.C
  regionModel/regionProperties/regionProperties.C
  tetOverlapVolume/tetOverlapVolume.C
  triangulatedPatch/triangulatedPatch.C
)
add_library(meshTools ${_FILES})
target_compile_features(meshTools PUBLIC cxx_std_11)
target_compile_definitions(meshTools PUBLIC WM_LABEL_SIZE=${WM_LABEL_SIZE} WM_${WM_PRECISION} NoRepository OPENFOAM=${OPENFOAM_VERSION})
target_link_libraries(meshTools PUBLIC surfMesh)
target_include_directories(meshTools PUBLIC
  triSurface/orientedSurface
  triSurface/surfaceLocation
  triSurface/surfaceFeatures
  triSurface/faceTriangulation
  triSurface/triSurfaceSearch
  triSurface/booleanOps/booleanSurface
  triSurface/booleanOps/intersectedSurface
  triSurface/booleanOps/surfaceIntersection
  triSurface/triSurfaceLoader
  triSurface/triangleFuncs
  triSurface/triSurfaceTools
  triSurface/triSurfaceTools/geompack
  momentOfInertia
  regionSplit
  processorLOD/cellBox
  processorLOD/box
  processorLOD/processorLOD
  processorLOD/faceBox
  multiWorld
  AMIInterpolation/faceAreaIntersect
  AMIInterpolation/triangle2D
  AMIInterpolation/AMIInterpolation
  AMIInterpolation/AMIInterpolation/faceAreaWeightAMI2D
  AMIInterpolation/AMIInterpolation/faceAreaWeightAMI
  AMIInterpolation/AMIInterpolation/advancingFrontAMI
  AMIInterpolation/AMIInterpolation/nearestFaceAMI
  AMIInterpolation/patches/cyclicAMI/cyclicAMILduInterfaceField
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPointPatchField
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPolyPatch
  AMIInterpolation/patches/cyclicAMI/cyclicAMIPointPatch
  AMIInterpolation/patches/cyclicPeriodicAMI/cyclicPeriodicAMIPolyPatch
  AMIInterpolation/patches/cyclicACMI/cyclicACMIPointPatch
  AMIInterpolation/patches/cyclicACMI/cyclicACMIPolyPatch
  AMIInterpolation/patches/cyclicACMI/cyclicACMIPointPatchField
  AMIInterpolation/patches/cyclicACMI/cyclicACMILduInterfaceField
  AMIInterpolation/GAMG/interfaceFields/cyclicAMIGAMGInterfaceField
  AMIInterpolation/GAMG/interfaceFields/cyclicACMIGAMGInterfaceField
  AMIInterpolation/GAMG/interfaces/cyclicACMIGAMGInterface
  AMIInterpolation/GAMG/interfaces/cyclicAMIGAMGInterface
  regionSplit2D
  PatchFunction1/ConstantField
  PatchFunction1/coordinateScaling
  PatchFunction1/PatchFunction1
  PatchFunction1/MappedFile
  PatchFunction1/CodedField
  PatchFunction1/UniformValueField
  searchableSurfaces/subTriSurfaceMesh
  searchableSurfaces/searchableCone
  searchableSurfaces/closedTriSurfaceMesh
  searchableSurfaces/searchablePlane
  searchableSurfaces/searchableSurfaces
  searchableSurfaces/searchableSurfacesQueries
  searchableSurfaces/searchableCylinder
  searchableSurfaces/searchableBox
  searchableSurfaces/searchablePlate
  searchableSurfaces/searchableSurface
  searchableSurfaces/searchableSurfaceCollection
  searchableSurfaces/searchableSphere
  searchableSurfaces/searchableDisk
  searchableSurfaces/searchableExtrudedCircle
  searchableSurfaces/triSurfaceMesh
  searchableSurfaces/searchableSurfaceWithGaps
  searchableSurfaces/searchableRotatedBox
  indexedOctree
  graph
  graph/writers/gnuplot
  graph/writers/xmgrace
  graph/writers/raw
  algorithms/PatchEdgeFaceWave
  algorithms/PointEdgeWave
  algorithms/MeshWave
  output/vtk/mesh
  output/vtk/topoSet
  output/vtk/patch
  edgeMesh
  edgeMesh/featureEdgeMesh
  edgeMesh/extendedFeatureEdgeMesh
  edgeMesh/extendedEdgeMesh
  edgeMesh/edgeFormats
  edgeMesh/edgeFormats/obj
  edgeMesh/edgeFormats/starcd
  edgeMesh/edgeFormats/edgeMesh
  edgeMesh/edgeFormats/vtk
  edgeMesh/edgeFormats/nastran
  edgeMesh/edgeMeshTools
  topoSet/cellZoneSources/setToCellZone
  topoSet/cellZoneSources/topoSetCellZoneSource
  topoSet/pointZoneSources/topoSetPointZoneSource
  topoSet/pointZoneSources/setToPointZone
  topoSet/topoSetSource
  topoSet/faceSources/cylinderAnnulusToFace
  topoSet/faceSources/boundaryToFace
  topoSet/faceSources/holeToFace
  topoSet/faceSources/patchToFace
  topoSet/faceSources/boxToFace
  topoSet/faceSources/zoneToFace
  topoSet/faceSources/pointToFace
  topoSet/faceSources/searchableSurfaceToFace
  topoSet/faceSources/regionToFace
  topoSet/faceSources/topoSetFaceSource
  topoSet/faceSources/sphereToFace
  topoSet/faceSources/normalToFace
  topoSet/faceSources/labelToFace
  topoSet/faceSources/faceToFace
  topoSet/faceSources/clipPlaneToFace
  topoSet/faceSources/cylinderToFace
  topoSet/faceSources/cellToFace
  topoSet/pointSources/faceToPoint
  topoSet/pointSources/pointToPoint
  topoSet/pointSources/boxToPoint
  topoSet/pointSources/topoSetPointSource
  topoSet/pointSources/sphereToPoint
  topoSet/pointSources/nearestToPoint
  topoSet/pointSources/surfaceToPoint
  topoSet/pointSources/cellToPoint
  topoSet/pointSources/clipPlaneToPoint
  topoSet/pointSources/zoneToPoint
  topoSet/pointSources/searchableSurfaceToPoint
  topoSet/pointSources/labelToPoint
  topoSet/pointSources/cylinderToPoint
  topoSet/topoSets
  topoSet/cellSources/fieldToCell
  topoSet/cellSources/rotatedBoxToCell
  topoSet/cellSources/sphereToCell
  topoSet/cellSources/nearestToCell
  topoSet/cellSources/faceZoneToCell
  topoSet/cellSources/cylinderToCell
  topoSet/cellSources/cellToCell
  topoSet/cellSources/nbrToCell
  topoSet/cellSources/clipPlaneToCell
  topoSet/cellSources/surfaceToCell
  topoSet/cellSources/faceToCell
  topoSet/cellSources/targetVolumeToCell
  topoSet/cellSources/labelToCell
  topoSet/cellSources/cylinderAnnulusToCell
  topoSet/cellSources/topoSetCellSource
  topoSet/cellSources/boundaryToCell
  topoSet/cellSources/haloToCell
  topoSet/cellSources/regionToCell
  topoSet/cellSources/patchToCell
  topoSet/cellSources/zoneToCell
  topoSet/cellSources/boxToCell
  topoSet/cellSources/pointToCell
  topoSet/cellSources/searchableSurfaceToCell
  topoSet/cellSources/shapeToCell
  topoSet/faceZoneSources/searchableSurfaceToFaceZone
  topoSet/faceZoneSources/topoSetFaceZoneSource
  topoSet/faceZoneSources/planeToFaceZone
  topoSet/faceZoneSources/faceZoneToFaceZone
  topoSet/faceZoneSources/setToFaceZone
  topoSet/faceZoneSources/setAndNormalToFaceZone
  topoSet/faceZoneSources/setsToFaceZone
  topoSet/faceZoneSources/cellToFaceZone
  mappedPatches/mappedPolyPatch
  mappedPatches/mappedPointPatch
  cellQuality
  polyMeshZipUpCells
  cellClassification
  twoDPointCorrector
  regionModel/regionProperties
  triangulatedPatch
  fields/pointPatchFields/uniformFixedValue
  fields/volume
  coupling
  meshStructure
  edgeFaceCirculator
  meshTools
  polyTopoChange
  polyTopoChange/modifyObject
  polyTopoChange/topoAction
  polyTopoChange/addObject
  polyTopoChange/removeObject
  primitiveMeshGeometry
  meshSearch
  coordSet
  coordSet/writers/gnuplot
  coordSet/writers/xmgrace
  coordSet/writers/gltf
  coordSet/writers/common
  coordSet/writers/ensight
  coordSet/writers/null
  coordSet/writers/vtk
  coordSet/writers/csv
  coordSet/writers/nastran
  coordSet/writers/abaqus
  coordSet/writers/raw
  surfaceSets
  cellFeatures
  cellDist
  cellDist/patchWave
  cellDist/directionalWallPoint
  cellDist/wallPoint
  matrices/lduMatrix/preconditioners/distributedDILUPreconditioner
  tetOverlapVolume
)
install(TARGETS meshTools DESTINATION ${CMAKE_INSTALL_LIBDIR}/openfoam EXPORT openfoam-targets)
